2.ReplicationControllers + ReplicaSets and Services + Ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  # type: ClusterIP
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 80
      nodePort: 30007
